2005-02-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_color_changed): Change the API to use
	the boolean argument to specify if we want to update gconf or not
	Always get the colors for both primary and secondary and update the
	thumbnail
	Only set the keys in gconf if we have the update boolean argument
	(gnome_wp_pcolor_changed): Removed this method, since we don't need
	to differentiate between primary/secondary for updating the thumbnail
	(gnome_wp_scolor_changed): When we change the color in the UI, we want
	to update gconf, we use this method for both color picker buttons now
	(gnome_wallpaper_properties_init): Use gnome_wp_scolor_changed for the
	callback on both color picker button widgets now

	Fixes #166486

2005-01-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_xml):
	Fix compile warning for syslangs declaration
	Wrap g_get_language_names in #if GLIB_CHECK_VERSION as it is 2.6 API

2005-01-09  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.[ch] (gnome_wp_update_preview): Add new callback
	routine for when the preview widget in the file chooser needs an update
	(wallpaper_properties_init): Set the preview widget in the file chooser
	to a GtkImage object and connect to the update-preview signal for when
	the selected file changes
	- Based on patch from Sebastien Bacher <seb128@debian.org>

	Fixes #139714

2005-01-08  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Preload the directory
	rather than nothing when adding directories for gconf notification

2005-01-08  Rodney Dawes  <dobey@novell.com>

	* background.desktop.in.in: Add %F to Exec command line

	* gnome-wp-capplet.[ch] (gnome_wp_remove_wp): Check that the tree path
	is not NULL before removing items from the list store
	(gnome_wp_load_stuffs): Don't duplicate the code from
	gnome_wp_add_image/gnome_wp_capplet_scroll_to_item  here
	Load any images we were passed on the command line, and free the